Account for null values and change type in constructor